--- a/project-first/src/index.css
+++ b/project-first/src/index.css
@@ -55,8 +55,6 @@ html {
 
 body {
   position: relative;
-  min-width: 320px;
-  min-height: 100vh;
   font-family: "Open Sans", sans-serif;
   color: var(--, #1C1C1C);
   font-size: 16px;
@@ -65,14 +63,30 @@ body {
   background-color:#ffffff;
 }
 
+#root {
+  min-width: 320px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1;
+}
+
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
-img {
+img,
+svg {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+svg {
+  max-height: 100%;
 }
 
 button {
@@ -80,6 +94,11 @@ button {
   cursor: pointer;
   border: 0;
   background-color: transparent;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 ul {
